--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 }
 
 @await Html.PartialAsync("~/Views/Home/HomeModals/ConfirmAddToCartModal.cshtml")
+@await Html.PartialAsync("~/Views/Home/HomeModals/NoPermissionsModal.cshtml")
 
 @if (TempData.ContainsKey("ShowModal"))
 {
@@ -117,7 +118,7 @@
 
 <div class="recommend">
     <div class="title">
-        * Nowości - powiedz kotku co masz w środku
+        * Nowości - dopiero co wystawione
     </div>
 
     <div class="row slider-bestsellary">
